src/test/deca/context/invalid/cast_int_bool.deca
// Description :
// Cast explicite d'un entier vers un booleen

// Resultats :
// Erreur contextuelle


{
  boolean b;
  b = (boolean) 1;
}
